# linux-embedded-learning

./: .gitignore  Linux_Embedded_App_Summer_Plan.md  Qt_Linux_HMI_Plan_From_Day4.md  README.md
linux-learning-notes/: .gitignore  README.md
linux-learning-notes/notes/: day01.md  day03.md  day04.md  day07.md  day09.md  day10.md  day12.md  day13.md  day14.md  day18.md
linux-learning-notes/projects/day02_compile_flow/: README.md
linux-learning-notes/projects/day03_makefile_basic/: README.md
linux-learning-notes/projects/day04_cmake_basic/: CMakeLists.txt  README.md
linux-learning-notes/projects/day04_cmake_basic/src/: calc.c
linux-learning-notes/projects/day06_static_shared_lib/: Makefile  README.md
linux-learning-notes/projects/day07_linux_toolbox_v1/: Makefile  README.md
linux-learning-notes/projects/day08_file_io/: Makefile  README.md
linux-learning-notes/projects/day12_process_runner/: Makefile
linux-learning-notes/projects/day13_signal_guard/: Makefile
linux-learning-notes/projects/day18_file_monitor_tool/: Makefile
linux_projects/day01_hello_linux/: README.md  hello_linux.c
linux_projects/day02_compile_flow/include/: add.h
linux_projects/day02_compile_flow/src/: main.c
linux_projects/day03_makefile_basic/: Makefile
linux_projects/day03_makefile_basic/include/: calc.h
linux_projects/day04_cmake_basic/include/: calc.h
linux_projects/day04_cmake_basic/src/: main.c
linux_projects/day05_gdb_debug/: CMakeLists.txt  README.md
linux_projects/day05_gdb_debug/src/: device.c  main.c
linux_projects/day07_linux_toolbox_v1/include/: time_utils.h
linux_projects/day09_file_io_utils/: Makefile
linux_projects/day10_file_stat/: Makefile
linux_projects/day11_dir_scan/: Makefile
linux_projects/day14_logger_module/: Makefile
linux_projects/day15_nonblock_io/: Makefile
linux_projects/day16_proc_sys_dev/: Makefile
linux_projects/day17_ioctl_mmap_intro/: Makefile
linux_projects/day19_pthread_basic/: Makefile
linux_projects/day20_thread_queue/: Makefile
linux_projects/day21_ipc_basic/: Makefile
linux_projects/day22_local_command_server/: Makefile
linux_projects/day23_tcp_echo/: Makefile
linux_projects/day24_multi_client_server/: Makefile
linux_projects/day25_select_server/: Makefile
notes/: day02.md  day05.md  day06.md  day08.md  day11.md  day15.md  day16.md  day17.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md
qt_projects/: .gitignore  CMakeLists.txt  README.md  logmanager.cpp  logmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialportmanager.h  settingsmanager.cpp  settingsmanager.h  tcpclientmanager.cpp  tcpclientmanager.h  worker.cpp  worker.h
qt_projects/qt_day04_first_app/: CMakeLists.txt
shiguang-study-flow/: .gitignore
(+48 files in other folders)
